--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <p>Phan Minh Cường</p>
+    <p>My goal are to be able to speak English fluently for a year, to get a great job in the future and to make more money !</p>
 </body>
 </html>
