--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Phan Minh Cường</p>
+    <p>My name is Phan Minh Cuong</p>
     <p>My goal are to be able to speak English fluently for a year, to get a great job in the future and to make more money !</p>
+    <p>I'm an IT student at Univerity, I have been learning English for ten years at school. But you know, I couldn't speak English,
+        because, all I was taught are doing Grammar and Vocabulary tests. As I said, now I'm a student and studying at HN city, so, I have many opportunities to talk with foreigners who can speak
+        English very well or native speakers.
+    </p>
+    
 </body>
 </html>
